--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Manali Portfolio</title>  
 
 <link href="./main.d8e0d294.css" rel="stylesheet"></head>
 
@@ -36,15 +36,11 @@
         <a class="fa-icon fa-icon-2x" href="https://twitter.com/" title="">
           <i class="fa fa-twitter"></i>
         </a>
-        <a class="fa-icon fa-icon-2x" href="https://dribbble.com/" title="">
-          <i class="fa fa-dribbble"></i>
-        </a>
+       
         <a class="fa-icon fa-icon-2x" href="https://www.linkedin.com/" title="">
           <i class="fa fa-linkedin"></i>
         </a>
-        <a class="fa-icon fa-icon-2x" href="https://vimeo.com/" title="">
-          <i class="fa fa-vimeo"></i>
-        </a>
+       
       </p>
     </div>
   </header>
